fix(i18n): add missing translations [CDS 2192]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
@@ -221,8 +221,8 @@
   "ip_description_field": "Description",
   "ip_description_new_title": "Add a description",
   "ip_description_edit_title": "Edit description",
-  "ip_edit_or_assosiate_description": "This section allows you to customise the public information on your IP block (information on the WHOIS database).",
-  "ip_edit_or_assosiate_title": "View/Edit IP Block Information",
+  "ip_edit_or_assosiate_description": "In this section, you can customise the public information on your IP block (information on the WHOIS database).",
+  "ip_edit_or_assosiate_title": "View/Edit IP block information",
   "ip_edit_or_assosiate_network_tab": "Network",
   "ip_edit_or_assosiate_asso_tab": "Organisation",
   "ip_edit_or_assosiate_edit_submit_button": "Edit",
