fix(i18n): add missing translations [CDS 2194]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_pt_PT.json
@@ -221,8 +221,8 @@
   "ip_description_field": "Descrição ",
   "ip_description_new_title": "Adicionar descrição",
   "ip_description_edit_title": "Editar a descrição",
-  "ip_edit_or_assosiate_description": "Esta secção permite-lhe personalizar as informações públicas sobre o seu bloco IP (informações presentes na base whois).",
-  "ip_edit_or_assosiate_title": "Ver/Modificar as informações sobre o bloco IP",
+  "ip_edit_or_assosiate_description": "Esta secção permite-lhe personalizar as informações públicas sobre o seu bloco IP (informações presentes na base Whois).",
+  "ip_edit_or_assosiate_title": "Ver/modificar as informações sobre o bloco IP",
   "ip_edit_or_assosiate_network_tab": "Rede",
   "ip_edit_or_assosiate_asso_tab": "Organização",
   "ip_edit_or_assosiate_edit_submit_button": "Editar",
