--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_fr_FR.json
@@ -7,5 +7,6 @@
   "dedicatedCloud_datacenters_disk": "Total espace disque",
   "dedicatedCloud_datacenters_order_host": "Commander un Host",
   "dedicatedCloud_datacenters_order_datastore": "Commander un Datastore",
-  "dedicatedCloud_datacenters_loading_error": "Une erreur est survenue lors du chargement des informations des datacentres."
+  "dedicatedCloud_datacenters_loading_error": "Une erreur est survenue lors du chargement des informations des datacentres.",
+  "dedicatedCloud_datacenters_add_not_available": "L’ajout de nouveau datacentre n’est pas disponible pour le moment. Nous travaillons à rendre cette fonctionnalité disponible très prochainement."
 }
