--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_de_DE.json
@@ -1,16 +1,16 @@
 {
-  "pci_app_add_resources_usecase": "Art der Replikas",
-  "pci_app_add_resources_usecase_item_cpu": "CPU",
-  "pci_app_add_resources_usecase_item_gpu": "GPU",
-  "pci_app_add_resources_proposed_title": "Verfügbare Replikas",
-  "pci_app_add_resources_proposed_ram": " {{ram}} RAM",
-  "pci_app_add_resources_proposed_storage": "{{ memory }} SSD",
+  "pci_app_add_resources_usecase": "Use Case",
+  "pci_app_add_resources_usecase_item_cpu": "Standard-Deployment (CPU-Ressourcen)",
+  "pci_app_add_resources_usecase_item_gpu": "Hochleistungsinferenz (GPU-Ressourcen)",
+  "pci_app_add_resources_proposed_title": "Verfügbare Ressourcenreihen",
+  "pci_app_add_resources_proposed_ram": "RAM: {{ ram }}",
+  "pci_app_add_resources_proposed_storage": "Lokaler Speicher: {{ memory }} SSD",
   "pci_app_add_resources_proposed_bandwidth": "{{ bandwidth }}/s",
   "pci_app_add_resources_proposed_resource_price_by_resource": "inkl. MwSt. / Stunde",
   "pci_app_add_resources_proposed_type_gpu": "(GPU)",
-  "pci_app_add_resources_proposed_type_gpu_description": "Anzeige der GPU-Replikas",
+  "pci_app_add_resources_proposed_type_gpu_description": "Verfügbare GPU Instanzen",
   "pci_app_add_resources_proposed_type_cpu": "(CPU)",
-  "pci_app_add_resources_proposed_type_cpu_description": "Anzeige der CPU-Replikas",
+  "pci_app_add_resources_proposed_type_cpu_description": "Verfügbare CPU Instanzen",
   "pci_app_add_resources_number_of_resources": "Ressourcen pro Replika",
   "pci_app_add_resources_number_of_resources_description": "CPU- und GPU-Ressourcen",
   "pci_app_add_resources_number_of_resources_type_cpu": "CPU-Ressourcen",
@@ -34,5 +34,13 @@
   "pci_app_add_resources_flavor_count": "Replika-Größe",
   "pci_app_add_resources_total": "Gesamtpreis der Bereitstellung",
   "pci_app_add_resources_resource_price": "Preis der Ressource",
-  "pci_app_add_resources_partner_price": "Preis der Lizenz"
+  "pci_app_add_resources_partner_price": "Preis der Lizenz",
+  "pci_app_add_resources_usecase_item_cpu_description": "Ausgezeichnetes Preis-Leistungs-Verhältnis für die Inferenz von standardmäßigen Machine-Learning-Modellen. Preiswerter und gleichzeitig sehr effizient, sofern Ihr Modell eine begrenzte Anzahl an Parametern enthält, mit sehr schneller Skalierung. Bis zu 12 CPUs und 10 Replikas für High Availability.",
+  "pci_app_add_resources_usecase_item_gpu_description": "Höhere Leistung für die Inferenz umfangreicher Machine-Learning-Modelle, insbesondere von Deep-Learning-Modellen mit einer großen Anzahl an Parametern. Bis zu 4 GPUs und 10 Replikas für High Availability.",
+  "pci_app_add_resources_proposed_cpu_description": "Modell: {{resourceDescription}}",
+  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCores",
+  "pci_app_add_resources_proposed_bandwidth_public": "Öffentliches Netzwerk {{ bandwidth }}/s",
+  "pci_app_add_resources_proposed_bandwidth_private": "Privates Netzwerk: {{ bandwidth }}/s",
+  "pci_app_add_resources_scaling_description_message": "Bitte beachten Sie, dass die ausgewählte Anzahl an Replikas die Anzahl der bezogenen Ressourcen entsprechend erhöht."
 }
