--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_es_ES.json
@@ -1,16 +1,16 @@
 {
-  "pci_app_add_resources_usecase": "Tipo de réplicas",
-  "pci_app_add_resources_usecase_item_cpu": "CPU",
-  "pci_app_add_resources_usecase_item_gpu": "GPU",
-  "pci_app_add_resources_proposed_title": "Gamas de réplicas disponibles",
-  "pci_app_add_resources_proposed_ram": " {{ ram }} RAM",
-  "pci_app_add_resources_proposed_storage": "{{ memory }} SSD",
+  "pci_app_add_resources_usecase": "Casos de uso",
+  "pci_app_add_resources_usecase_item_cpu": "Despliegue estándar (recursos CPU)",
+  "pci_app_add_resources_usecase_item_gpu": "Inferencia de alto rendimiento (recursos GPU)",
+  "pci_app_add_resources_proposed_title": "Gamas de recursos propuestas",
+  "pci_app_add_resources_proposed_ram": "RAM: {{ ram }}",
+  "pci_app_add_resources_proposed_storage": "Almacenamiento local: {{ memory }} SSD",
   "pci_app_add_resources_proposed_bandwidth": "{{ bandwidth }}/s",
   "pci_app_add_resources_proposed_resource_price_by_resource": "/hora + IVA",
   "pci_app_add_resources_proposed_type_gpu": "(GPU)",
-  "pci_app_add_resources_proposed_type_gpu_description": "Visualización de las réplicas GPU",
+  "pci_app_add_resources_proposed_type_gpu_description": "Instancias GPU disponibles",
   "pci_app_add_resources_proposed_type_cpu": "(CPU)",
-  "pci_app_add_resources_proposed_type_cpu_description": "Visualización de las réplicas CPU",
+  "pci_app_add_resources_proposed_type_cpu_description": "Instancias CPU disponibles",
   "pci_app_add_resources_number_of_resources": "Recursos por réplicas",
   "pci_app_add_resources_number_of_resources_description": "Recursos CPU y GPU",
   "pci_app_add_resources_number_of_resources_type_cpu": "Recursos CPU",
@@ -34,5 +34,13 @@
   "pci_app_add_resources_flavor_count": "Tamaño de réplica",
   "pci_app_add_resources_total": "Precio total del despliegue",
   "pci_app_add_resources_resource_price": "Precio del recurso",
-  "pci_app_add_resources_partner_price": "Precio de la licencia"
+  "pci_app_add_resources_partner_price": "Precio de la licencia",
+  "pci_app_add_resources_usecase_item_cpu_description": "Excelente relación calidad-precio para la inferencia de modelos estándar de machine learning. Opción más asequible y muy eficiente en modelos con un número limitado de parámetros, con un rápido escalado. Posibilidad de elegir hasta 12 CPU y 10 réplicas para alta disponibilidad.",
+  "pci_app_add_resources_usecase_item_gpu_description": "Mejores prestaciones para la inferencia de grandes modelos de machine learning y, en particular, de modelos de deep learning con un gran número de parámetros. Posibilidad de elegir hasta 4 GPU y 10 réplicas para alta disponibilidad.",
+  "pci_app_add_resources_proposed_cpu_description": "Modelo: {{resourceDescription}}",
+  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCores",
+  "pci_app_add_resources_proposed_bandwidth_public": "Red pública: {{ bandwidth }}/s",
+  "pci_app_add_resources_proposed_bandwidth_private": "Red privada: {{ bandwidth }}/s",
+  "pci_app_add_resources_scaling_description_message": "Tenga en cuenta que el número de réplicas seleccionado multiplicará el número de recursos utilizados."
 }
