--- a/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_pl_PL.json
@@ -15,5 +15,6 @@
   "cpbc_hourly_data_processing_title": "Data processing",
   "cpbc_hourly_databases_title": "Bazy danych",
   "cpbc_hourly_floating_ip_title": "Floating IP",
-  "cpbc_hourly_gateway_title": "Gateway"
+  "cpbc_hourly_gateway_title": "Gateway",
+  "cpbc_hourly_ai_deploy_title": "AI Deploy"
 }
