--- a/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_pt_PT.json
@@ -15,5 +15,6 @@
   "cpbc_hourly_data_processing_title": "Processamento de dados",
   "cpbc_hourly_databases_title": "Bases de dados",
   "cpbc_hourly_floating_ip_title": "IP flutuante",
-  "cpbc_hourly_gateway_title": "Gateway"
+  "cpbc_hourly_gateway_title": "Gateway",
+  "cpbc_hourly_ai_deploy_title": "AI Deploy"
 }
