--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_en_GB.json
@@ -1,6 +1,6 @@
 {
-  "pci_app_add_attach_container_description": "If necessary, you can attach OVHcloud Object Storage containers to your app. Once they are attached, they will be temporarily loaded and cached near your instance, to minimise latency and improve performance. The best practice is to attach one container with your incoming data, and another with your outgoing data.",
-  "pci_app_add_attach_container_description_link": "Learn more about data storage.",
+  "pci_app_add_attach_container_description": "If necessary, you can attach OVHcloud Object Storage containers to your app. Once they are attached, they will be temporarily loaded and cached near your instance, to minimise latency and improve performance. The best practice can be to attach a container with your data, and the model on which your app will be based.",
+  "pci_app_add_attach_container_description_link": "Find out more about data management with AI Deploy.",
   "pci_app_add_attach_container_btn_attach_storage_add": "Attach an Object Storage container",
   "pci_app_add_attach_container_btn_attach_repo_git_add": "Attach a public Git repository",
   "pci_app_add_attach_container_btn_attach_storage_remove": "Delete an Object Storage container",
