--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_es_ES.json
@@ -1,6 +1,6 @@
 {
-  "pci_app_add_attach_container_description": "Si lo necesita, puede asociar contenedores Object Storage de OVHcloud a su app. Una vez que haya asociado sus contenedores, estos se cargarán temporalmente y se almacenarán en caché lo más cerca posible de su instancia para reducir la latencia y mejorar el rendimiento. Para un funcionamiento óptimo, le recomendamos que asocie un contenedor con los datos entrantes y otro con los datos salientes.",
-  "pci_app_add_attach_container_description_link": "Más información sobre el almacenamiento de datos.",
+  "pci_app_add_attach_container_description": "Si lo necesita, puede asociar contenedores Object Storage de OVHcloud a su app. Una vez que haya asociado sus contenedores, estos se cargarán temporalmente y se almacenarán en caché lo más cerca posible de su instancia para reducir la latencia y mejorar el rendimiento. Le recomendamos que asocie un contenedor con sus datos y el modelo en el que se basará su app.",
+  "pci_app_add_attach_container_description_link": "Más información sobre la gestión de datos con AI Deploy.",
   "pci_app_add_attach_container_btn_attach_storage_add": "Asociar un contenedor Object Storage",
   "pci_app_add_attach_container_btn_attach_repo_git_add": "Asociar un repositorio Git público",
   "pci_app_add_attach_container_btn_attach_storage_remove": "Eliminar un contenedor Object Storage",
