--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_pl_PL.json
@@ -1,6 +1,6 @@
 {
-  "pci_app_add_attach_container_description": "W razie potrzeby możesz przypisać do aplikacji kontenery Object Storage. Po przypisaniu zostaną one tymczasowo załadowane i umieszczone w pamięci cache w pobliżu Twojej instancji, aby skrócić czas odpowiedzi i zwiększyć wydajność. Dobrym rozwiązaniem jest powiązanie jednego kontenera z danymi wejściowymi, a drugiego z danymi wyjściowymi.",
-  "pci_app_add_attach_container_description_link": "Więcej informacji o przechowywaniu danych.",
+  "pci_app_add_attach_container_description": "W razie potrzeby możesz przypisać do aplikacji kontenery Object Storage. Po przypisaniu zostaną one tymczasowo załadowane i umieszczone w pamięci cache w pobliżu Twojej instancji, dzięki czemu skróci się czas odpowiedzi i zwiększy wydajność. Dobrym rozwiązaniem może być powiązanie kontenera z danymi oraz modelem, na którym będzie opierać się Twoja aplikacja.",
+  "pci_app_add_attach_container_description_link": "Dowiedz się więcej na temat zarządzania danymi w ramach AI Deploy.",
   "pci_app_add_attach_container_btn_attach_storage_add": "Przypisz kontener Object Storage",
   "pci_app_add_attach_container_btn_attach_repo_git_add": "Przypisz publiczne repozytorium Git",
   "pci_app_add_attach_container_btn_attach_storage_remove": "Usuń kontener Object Storage",
