--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-attach/translations/Messages_pt_PT.json
@@ -1,6 +1,6 @@
 {
-  "pci_app_add_attach_container_description": "Se necessário, pode associar containers Object Storage da OVHcloud à sua app. Uma vez associados os containers, estes serão temporariamente carregados e colocados em cache perto da sua instância, de forma a reduzir a latência e melhorar o desempenho. A boa prática é associar um container aos seus dados de entrada e outro aos seus dados de saída.",
-  "pci_app_add_attach_container_description_link": "Saber mais sobre o armazenamento de dados.",
+  "pci_app_add_attach_container_description": "Se necessário, pode associar containers Object Storage da OVHcloud à sua app. Uma vez associados os containers, estes serão temporariamente carregados e colocados em cache perto da sua instância, de forma a reduzir a latência e melhorar o desempenho. Uma boa prática pode ser associar um container aos seus dados e ao modelo em que se baseará a sua app.",
+  "pci_app_add_attach_container_description_link": "Saber mais sobre a gestão de dados com o AI Deploy.",
   "pci_app_add_attach_container_btn_attach_storage_add": "Associar um container Object Storage",
   "pci_app_add_attach_container_btn_attach_repo_git_add": "Associar um repositório Git público",
   "pci_app_add_attach_container_btn_attach_storage_remove": "Eliminar um container Object Storage",
