--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_de_DE.json
@@ -1,7 +1,7 @@
 {
   "pci_app_add_configuration_name": "Der Name Ihrer App",
   "pci_app_add_configuration_label": "Label",
-  "pci_app_add_configuration_label_description": "Sie können Ihrer App Label hinzufügen. So lässt sich leicht nach einem bestimmten Label filtern oder mit einem Token sichern.",
+  "pci_app_add_configuration_label_description": "Sie können Label zu Ihrer APP hinzufügen. Diese sind nützlich, um ein bestimmtes Label zum Filtern oder zur Sicherung per Token zu nutzen. Sie können eine bestimmte ID, einen Typ oder ein anderes zuvor erstelltes Label angeben.",
   "pci_app_add_configuration_label_field_key": "Schlüssel",
   "pci_app_add_configuration_label_field_key_error_key_already_exist": "Dieser Schlüssel besteht bereits",
   "pci_app_add_configuration_label_field_value": "Wert",
@@ -12,7 +12,7 @@
   "pci_app_add_privacy_settings_item_restricted_description": "Der Zugriff auf Ihre App ist durch eine Authentifizierung eingeschränkt.",
   "pci_app_add_privacy_settings_item_public": "Öffentlicher Zugang",
   "pci_app_add_privacy_settings_item_public_description": "Ihre App ist über Ihre URL oder API für alle verfügbar. Jeder kann auf Ihre Anwendung und die damit verbundenen Daten zugreifen.",
-  "pci_app_add_privacy_settings_item_public_warning": "Bitte seien Sie vorsichtig beim Umgang mit sensiblen Daten.",
+  "pci_app_add_privacy_settings_item_public_warning": "Bitte seien Sie stets vorsichtig beim Umgang mit sensiblen Daten.",
   "pci_app_add_privacy_title": "Zugangsregel für Ihre App",
   "pci_app_add_settings_port": "HTTP Port",
   "pci_app_add_settings_port_help": "HTTP-Port, mit dem Ihre App verbunden ist.",
@@ -24,5 +24,6 @@
   "pci_app_add_readiness_probe_path_label": "API-Endpoint der Probe",
   "pci_app_add_readiness_probe_path_help_text": "API-Endpoint der Verfügbarkeitsprobe Muss einen Status von 2XX oder 3XX zurückmelden",
   "pci_app_add_readiness_probe_port_label": "Port der Probe",
-  "pci_app_add_readiness_probe_port_help_text": "Hiermit können Sie einen bestimmten Port für diesen API-Zugriffspfad konfigurieren."
+  "pci_app_add_readiness_probe_port_help_text": "Hiermit können Sie einen bestimmten Port für diesen API-Zugriffspfad konfigurieren.",
+  "pci_app_add_configuration_label_description_link": "Mehr Informationen zur Labelverwaltung mit AI Deploy."
 }
