--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_en_GB.json
@@ -1,7 +1,7 @@
 {
   "pci_app_add_configuration_name": "Your app name",
   "pci_app_add_configuration_label": "Labels",
-  "pci_app_add_configuration_label_description": "You can add labels to your app. This is useful for filtering or securing by token on a specific label.",
+  "pci_app_add_configuration_label_description": "You can add labels to your app. These are useful for filtering, or securing by token on a specific label. You can enter a specific ID, type, or any other label you have created.",
   "pci_app_add_configuration_label_field_key": "Key",
   "pci_app_add_configuration_label_field_key_error_key_already_exist": "This key already exists",
   "pci_app_add_configuration_label_field_value": "Value",
@@ -12,7 +12,7 @@
   "pci_app_add_privacy_settings_item_restricted_description": "Access to your app is restricted by authentication.",
   "pci_app_add_privacy_settings_item_public": "Public access",
   "pci_app_add_privacy_settings_item_public_description": "Your app is publicly accessible through your URL or API. Anyone can access your application and the data attached to it.",
-  "pci_app_add_privacy_settings_item_public_warning": "Please ensure that you take great care with sensitive data.",
+  "pci_app_add_privacy_settings_item_public_warning": "Be careful with sensitive data.",
   "pci_app_add_privacy_title": "App access rule",
   "pci_app_add_settings_port": "HTTP port",
   "pci_app_add_settings_port_help": "The HTTP port your app is linked to.",
@@ -24,5 +24,6 @@
   "pci_app_add_readiness_probe_path_label": "API endpoint for readiness probe",
   "pci_app_add_readiness_probe_path_help_text": "This is the API endpoint for the readiness probe. Must return a 2XX or 3XX status",
   "pci_app_add_readiness_probe_port_label": "Probe port",
-  "pci_app_add_readiness_probe_port_help_text": "Enables you to configure a specific port for this API access path"
+  "pci_app_add_readiness_probe_port_help_text": "Enables you to configure a specific port for this API access path",
+  "pci_app_add_configuration_label_description_link": "Find out more about managing labels with AI Deploy."
 }
