--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_es_ES.json
@@ -1,7 +1,7 @@
 {
   "pci_app_add_configuration_name": "Nombre de su app",
   "pci_app_add_configuration_label": "Labels",
-  "pci_app_add_configuration_label_description": "Puede añadir labels a su app. Esta opción resulta útil para filtrar o proteger mediante token en un label concreto.",
+  "pci_app_add_configuration_label_description": "Puede añadir etiquetas (labels) a su app. Estas le permitirán filtrar o proteger por token en una etiqueta concreta. Es posible indicar un ID específico, un tipo o cualquier otra etiqueta creada anteriormente.",
   "pci_app_add_configuration_label_field_key": "Clave",
   "pci_app_add_configuration_label_field_key_error_key_already_exist": "Esta clave ya existe.",
   "pci_app_add_configuration_label_field_value": "Valor",
@@ -12,7 +12,7 @@
   "pci_app_add_privacy_settings_item_restricted_description": "El acceso a su app está restringido por autenticación.",
   "pci_app_add_privacy_settings_item_public": "Acceso público",
   "pci_app_add_privacy_settings_item_public_description": "Todos los usuarios pueden acceder a su app a través de su URL o API. Cualquier usuario puede acceder a su app y a los datos asociados.",
-  "pci_app_add_privacy_settings_item_public_warning": "¡Preste especial atención a sus datos sensibles!",
+  "pci_app_add_privacy_settings_item_public_warning": "¡Preste especial atención a los datos sensibles!",
   "pci_app_add_privacy_title": "Regla de acceso a su app",
   "pci_app_add_settings_port": "Puerto HTTP",
   "pci_app_add_settings_port_help": "Puerto HTTP al que está asociada su app.",
@@ -24,5 +24,6 @@
   "pci_app_add_readiness_probe_path_label": "Punto final de API de la sonda",
   "pci_app_add_readiness_probe_path_help_text": "Punto final de API de la sonda de disponibilidad Debe devolver un estado 2XX o 3XX",
   "pci_app_add_readiness_probe_port_label": "Puerto de la sonda",
-  "pci_app_add_readiness_probe_port_help_text": "Permite configurar un puerto específico para esta ruta de acceso API"
+  "pci_app_add_readiness_probe_port_help_text": "Permite configurar un puerto específico para esta ruta de acceso API",
+  "pci_app_add_configuration_label_description_link": "Más información sobre la gestión de etiquetas con AI Deploy."
 }
