--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_it_IT.json
@@ -1,7 +1,7 @@
 {
   "pci_app_add_configuration_name": "Nome della tua App",
   "pci_app_add_configuration_label": "Label",
-  "pci_app_add_configuration_label_description": "È possibile aggiungere label all’App. Utile per i filtri e la protezione tramite token su un label preciso",
+  "pci_app_add_configuration_label_description": "Aggiungere label all’app è utile per il filtraggio e la protezione via token su un label specifico. È possibile indicare un ID specifico, un tipo o un altro label creato precedentemente.",
   "pci_app_add_configuration_label_field_key": "Chiave",
   "pci_app_add_configuration_label_field_key_error_key_already_exist": "Questa chiave esiste già",
   "pci_app_add_configuration_label_field_value": "Valore",
@@ -12,7 +12,7 @@
   "pci_app_add_privacy_settings_item_restricted_description": "L'accesso all’App è limitato tramite autenticazione.",
   "pci_app_add_privacy_settings_item_public": "Accesso pubblico",
   "pci_app_add_privacy_settings_item_public_description": "L’App è accessibile a tutti tramite URL o API. Chiunque può accedere all’applicazione e ai dati ad essa associati.",
-  "pci_app_add_privacy_settings_item_public_warning": "Ti consigliamo di prestare attenzione ai dati sensibili.",
+  "pci_app_add_privacy_settings_item_public_warning": "Presta la massima attenzione ai dati sensibili.",
   "pci_app_add_privacy_title": "Regola di accesso all’App",
   "pci_app_add_settings_port": "Porta HTTP",
   "pci_app_add_settings_port_help": "Porta HTTP a cui è collegata l’App.",
@@ -24,5 +24,6 @@
   "pci_app_add_readiness_probe_path_label": "Endpoint API della sonda",
   "pci_app_add_readiness_probe_path_help_text": "Endpoint API della sonda di disponibilità Deve restituire uno stato 2XX o 3XX",
   "pci_app_add_readiness_probe_port_label": "Porta della sonda",
-  "pci_app_add_readiness_probe_port_help_text": "Permette di configurare una porta specifica per questa chiamata API"
+  "pci_app_add_readiness_probe_port_help_text": "Permette di configurare una porta specifica per questa chiamata API",
+  "pci_app_add_configuration_label_description_link": "Più informazioni sulla gestione dei label con AI Deploy."
 }
