--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-configuration/translations/Messages_pl_PL.json
@@ -1,7 +1,7 @@
 {
   "pci_app_add_configuration_name": "Nazwa aplikacji",
   "pci_app_add_configuration_label": "Etykiety",
-  "pci_app_add_configuration_label_description": "Możesz dodać etykiety do aplikacji. Przydatne do filtrowania lub zabezpieczania za pomocą tokena na konkretnej etykiecie",
+  "pci_app_add_configuration_label_description": "Możesz dodać etykiety do aplikacji. Są one przydatne do filtrowania lub zabezpieczania tokenem określonej etykiety. Możesz zapisać określony identyfikator, typ lub inną uprzednio utworzoną etykietę.",
   "pci_app_add_configuration_label_field_key": "Klucz",
   "pci_app_add_configuration_label_field_key_error_key_already_exist": "Ten klucz już istnieje",
   "pci_app_add_configuration_label_field_value": "Wartość",
@@ -12,7 +12,7 @@
   "pci_app_add_privacy_settings_item_restricted_description": "Dostęp do aplikacji jest ograniczony procedurą uwierzytelniania.",
   "pci_app_add_privacy_settings_item_public": "Dostęp publiczny",
   "pci_app_add_privacy_settings_item_public_description": "Aplikacja jest dostępna dla wszystkich dzięki URL lub API. Każdy może uzyskać dostęp do Twojej aplikacji i powiązanych z nią danych.",
-  "pci_app_add_privacy_settings_item_public_warning": "Zachowaj ostrożność w stosunku do danych wrażliwych.",
+  "pci_app_add_privacy_settings_item_public_warning": "Zachowaj ostrożność w przypadku danych wrażliwych.",
   "pci_app_add_privacy_title": "Zasada dostępu do Twojej aplikacji",
   "pci_app_add_settings_port": "Port HTTP",
   "pci_app_add_settings_port_help": "Port HTTP, z którym powiązana jest Twoja aplikacja.",
@@ -24,5 +24,6 @@
   "pci_app_add_readiness_probe_path_label": "Punkt końcowy API sondy",
   "pci_app_add_readiness_probe_path_help_text": "Punkt końcowy API sondy dostępności. Powinna zwracać status 2XX lub 3XX",
   "pci_app_add_readiness_probe_port_label": "Port sondy",
-  "pci_app_add_readiness_probe_port_help_text": "Umożliwia konfigurację określonego portu dla tej ścieżki dostępu API"
+  "pci_app_add_readiness_probe_port_help_text": "Umożliwia konfigurację określonego portu dla tej ścieżki dostępu API",
+  "pci_app_add_configuration_label_description_link": "Dowiedz się więcej o zarządzaniu etykietami za pomocą AI Deploy."
 }
