--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_de_DE.json
@@ -1,5 +1,5 @@
 {
-  "pci_app_submit_select_image_tips": "Geben Sie den Zugriffspfad für Ihr Docker-Image ein. Dies kann eine öffentliche Registry wie GitHub, Gitlab und DockerHub oder eine private Registry sein.",
+  "pci_app_submit_select_image_tips": "Geben Sie den Zugriffspfad für Ihr Docker-Image ein. Das kann eine öffentliche (GitHub, Gitlab, DockerHub, ...) oder eine private Registry sein.",
   "pci_app_submit_select_image_preset_info": "Beschreibung",
   "pci_app_submit_select_image_advanced_tips": "Ihre eigene Anwendung einsetzen",
   "pci_app_submit_select_image_advanced": "Ihre eigene Anwendung einsetzen (Docker Image)",
@@ -7,5 +7,9 @@
   "pci_app_submit_select_image_tips_help": "Angenommen werden Images, die in einem privaten oder öffentlichen Register gehostet werden (GitHub, GitLab, DockerHub...)",
   "pci_app_submit_select_image_custom_doc": "Erstellen Sie Ihr personalisiertes Docker Image",
   "pci_app_submit_select_start_from": "Ab",
-  "pci_app_submit_select_image_portfolio": "Lernen Sie unser Angebot an gebrauchsfertigen AI-Anwendungen kennen"
+  "pci_app_submit_select_image_portfolio": "Lernen Sie unser Angebot an gebrauchsfertigen AI-Anwendungen kennen",
+  "pci_app_submit_select_image_info_message_1": "Wenn Sie eine private Registry nutzen, konfigurieren Sie diese.",
+  "pci_app_submit_select_image_info_message_2": "Bitte beachten Sie, dass das Image mit einer {{architectures}} AMD-Architektur erstellt werden muss. Die Verwendung von Docker-Compose ist nicht möglich.",
+  "pci_app_submit_select_image_info_message_3": "Achten Sie darauf, dem OVHcloud Benutzer (user=42420:42420) die richtigen Zugriffsrechte zu geben, damit Ihr Image korrekt startet:",
+  "pci_app_submit_select_image_info_custom_doc": "Weitere Informationen hierzu finden Sie in unserer Dokumentation."
 }
