--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_es_ES.json
@@ -7,5 +7,9 @@
   "pci_app_submit_select_image_tips_help": "Se aceptan las imágenes alojadas en un registro público o privado (GitHub, GitLab, DockerHub, etc.).",
   "pci_app_submit_select_image_custom_doc": "Cree su propia imagen Docker personalizada",
   "pci_app_submit_select_start_from": "Desde",
-  "pci_app_submit_select_image_portfolio": "Descubra nuestra cartera de aplicaciones AI listas para usar"
+  "pci_app_submit_select_image_portfolio": "Descubra nuestra cartera de aplicaciones AI listas para usar",
+  "pci_app_submit_select_image_info_message_1": "Si se trata de un registro privado, deberá configurarlo.",
+  "pci_app_submit_select_image_info_message_2": "Tenga en cuenta que la imagen debe construirse con una arquitectura AMD {{architectures}}. No es posible utilizar Docker Compose.",
+  "pci_app_submit_select_image_info_message_3": "Asegúrese de otorgar los permisos de acceso correspondientes al usuario de OVHcloud (user=42420:42420) para que la imagen se lance correctamente:",
+  "pci_app_submit_select_image_info_custom_doc": "Para más información, consulte nuestra documentación."
 }
