--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_pt_PT.json
@@ -1,5 +1,5 @@
 {
-  "pci_app_submit_select_image_tips": "Introduza o caminho de acesso à sua imagem Docker. Pode ser um registo público (GitHub, GitLab, DockerHub...) ou privado",
+  "pci_app_submit_select_image_tips": "Introduza o caminho de acesso à sua imagem Docker. Pode ser um registo público (GitHub, Gitlab, DockerHub...) ou privado.",
   "pci_app_submit_select_image_preset_info": "Descrição",
   "pci_app_submit_select_image_advanced_tips": "Implementar a sua própria aplicação",
   "pci_app_submit_select_image_advanced": "Implementar a sua própria aplicação (imagem Docker)",
@@ -7,5 +7,9 @@
   "pci_app_submit_select_image_tips_help": "As imagens alojadas num registry privado ou público são aceites (GitHub, GitLab, DockerHub, etc.)",
   "pci_app_submit_select_image_custom_doc": "Crie a sua própria imagem Docker personalizada",
   "pci_app_submit_select_start_from": "A partir de",
-  "pci_app_submit_select_image_portfolio": "Descubra a nossa carteira de aplicações AI prontas a usar"
+  "pci_app_submit_select_image_portfolio": "Descubra a nossa carteira de aplicações AI prontas a usar",
+  "pci_app_submit_select_image_info_message_1": "Certifique-se de que configura o seu registo se este for privado.",
+  "pci_app_submit_select_image_info_message_2": "Tenha em conta que a imagem deve ser construída com uma arquitetura AMD {{architectures}}. Não é possível utilizar o docker-compose.",
+  "pci_app_submit_select_image_info_message_3": "Tenha o cuidado de conceder as permissões de acesso ao utilizador OVHcloud (user=42420:42420) para que a sua imagem seja corretamente lançada:",
+  "pci_app_submit_select_image_info_custom_doc": "Para mais informações, não hesite em consultar a nossa documentação."
 }
