--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_en_GB.json
@@ -1,16 +1,16 @@
 {
-  "pci_app_add_resources_usecase": "Replica type",
-  "pci_app_add_resources_usecase_item_cpu": "CPU",
-  "pci_app_add_resources_usecase_item_gpu": "GPU",
-  "pci_app_add_resources_proposed_title": "Available replica ranges",
-  "pci_app_add_resources_proposed_ram": " {{ram}} RAM",
-  "pci_app_add_resources_proposed_storage": "{{memory}} SSD",
+  "pci_app_add_resources_usecase": "Use cases",
+  "pci_app_add_resources_usecase_item_cpu": "Standard deployment (CPU resources)",
+  "pci_app_add_resources_usecase_item_gpu": "High-performance inference (GPU resources)",
+  "pci_app_add_resources_proposed_title": "Available resource ranges",
+  "pci_app_add_resources_proposed_ram": "RAM: {{ram}}",
+  "pci_app_add_resources_proposed_storage": "Local storage: {{memory}} SSD",
   "pci_app_add_resources_proposed_bandwidth": "{{bandwidth}}/s",
   "pci_app_add_resources_proposed_resource_price_by_resource": "ex. VAT/hour",
   "pci_app_add_resources_proposed_type_gpu": "(GPU)",
-  "pci_app_add_resources_proposed_type_gpu_description": "Showing GPU replicas",
+  "pci_app_add_resources_proposed_type_gpu_description": "GPU instances available",
   "pci_app_add_resources_proposed_type_cpu": "(CPU)",
-  "pci_app_add_resources_proposed_type_cpu_description": "Showing CPU replicas",
+  "pci_app_add_resources_proposed_type_cpu_description": "CPU instances available",
   "pci_app_add_resources_number_of_resources": "Resources per replica",
   "pci_app_add_resources_number_of_resources_description": "CPU/GPU resources",
   "pci_app_add_resources_number_of_resources_type_cpu": "CPU resources",
@@ -34,5 +34,13 @@
   "pci_app_add_resources_flavor_count": "Replica size",
   "pci_app_add_resources_total": "Total deployment price",
   "pci_app_add_resources_resource_price": "Resource price",
-  "pci_app_add_resources_partner_price": "Licence price"
+  "pci_app_add_resources_partner_price": "Licence price",
+  "pci_app_add_resources_usecase_item_cpu_description": "Excellent quality-price ratio for inference from standard machine learning models. Less expensive, but still very efficient if your model contains a limited number of parameters, with very quick scaling. Choose up to 12 CPUs and 10 replicas for high availability.",
+  "pci_app_add_resources_usecase_item_gpu_description": "Better performance for inference of large machine learning models, especially deep learning models with a high number of parameters. Up to 4 GPUs and 10 replicas can be selected for high availability.",
+  "pci_app_add_resources_proposed_cpu_description": "Template: {{resourceDescription}}",
+  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCores",
+  "pci_app_add_resources_proposed_bandwidth_public": "Public network: {{bandwidth}}/s",
+  "pci_app_add_resources_proposed_bandwidth_private": "Private network: {{bandwidth}}/s",
+  "pci_app_add_resources_scaling_description_message": "Please note that the number of replica nodes you choose will increase the number of resources you use."
 }
