--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_it_IT.json
@@ -1,16 +1,16 @@
 {
-  "pci_app_add_resources_usecase": "Tipo di repliche",
-  "pci_app_add_resources_usecase_item_cpu": "CPU",
-  "pci_app_add_resources_usecase_item_gpu": "GPU",
-  "pci_app_add_resources_proposed_title": "Gamme di repliche disponibili",
-  "pci_app_add_resources_proposed_ram": " {{ ram }} RAM",
-  "pci_app_add_resources_proposed_storage": "{{ memory }} SSD",
+  "pci_app_add_resources_usecase": "Caso d'uso",
+  "pci_app_add_resources_usecase_item_cpu": "Deploy standard (risorse CPU)",
+  "pci_app_add_resources_usecase_item_gpu": "Inferenza ad alte prestazioni (risorse GPU)",
+  "pci_app_add_resources_proposed_title": "Gamme di risorse proposte",
+  "pci_app_add_resources_proposed_ram": "RAM: {{ ram }}",
+  "pci_app_add_resources_proposed_storage": "Storage locale: {{ memory }} SSD",
   "pci_app_add_resources_proposed_bandwidth": "{{ bandwidth }}/s",
   "pci_app_add_resources_proposed_resource_price_by_resource": "+IVA/ora",
   "pci_app_add_resources_proposed_type_gpu": "(GPU)",
-  "pci_app_add_resources_proposed_type_gpu_description": "Visualizzazione delle repliche GPU",
+  "pci_app_add_resources_proposed_type_gpu_description": "Istanze GPU disponibili",
   "pci_app_add_resources_proposed_type_cpu": "(CPU)",
-  "pci_app_add_resources_proposed_type_cpu_description": "Visualizzazione delle repliche CPU",
+  "pci_app_add_resources_proposed_type_cpu_description": "Istanze CPU disponibili",
   "pci_app_add_resources_number_of_resources": "Risorse per replica",
   "pci_app_add_resources_number_of_resources_description": "Risorse CPU/GPU",
   "pci_app_add_resources_number_of_resources_type_cpu": "Risorse CPU",
@@ -34,5 +34,13 @@
   "pci_app_add_resources_flavor_count": "Dimensione della replica",
   "pci_app_add_resources_total": "Prezzo totale del deploy",
   "pci_app_add_resources_resource_price": "Prezzo della risorsa",
-  "pci_app_add_resources_partner_price": "Prezzo della licenza"
+  "pci_app_add_resources_partner_price": "Prezzo della licenza",
+  "pci_app_add_resources_usecase_item_cpu_description": "Ottimo rapporto qualità/prezzo per l'inferenza dei modelli standard di Machine Learning. Meno costoso ma molto efficiente se il modello contiene un numero limitato di parametri, con scalabilità molto rapida. Possibilità di scegliere fino a 12 CPU e 10 repliche per garantire la massima disponibilità.",
+  "pci_app_add_resources_usecase_item_gpu_description": "Migliori performance per l'inferenza di modelli di Machine Learning di grandi dimensioni e in particolare di modelli di Deep Learning con un numero elevato di parametri. Possibilità di scegliere fino a 4 GPU e 10 repliche per l’alta disponibilità.",
+  "pci_app_add_resources_proposed_cpu_description": "Modello: {{resourceDescription}}",
+  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_bandwidth_public": "Rete pubblica: {{ bandwidth }}/s",
+  "pci_app_add_resources_proposed_bandwidth_private": "Rete privata: {{ bandwidth }}/s",
+  "pci_app_add_resources_scaling_description_message": "Ricordiamo che il numero di repliche scelto moltiplicherà il numero di risorse selezionate."
 }
