--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_pt_PT.json
@@ -1,16 +1,16 @@
 {
-  "pci_app_add_resources_usecase": "Tipo de réplicas",
-  "pci_app_add_resources_usecase_item_cpu": "CPU",
-  "pci_app_add_resources_usecase_item_gpu": "GPU",
-  "pci_app_add_resources_proposed_title": "Gamas de réplicas disponíveis",
-  "pci_app_add_resources_proposed_ram": " {{ ram }} RAM",
-  "pci_app_add_resources_proposed_storage": "{{ memory }} SSD",
+  "pci_app_add_resources_usecase": "Casos de uso",
+  "pci_app_add_resources_usecase_item_cpu": "Implementação standard (recursos CPU)",
+  "pci_app_add_resources_usecase_item_gpu": "Inferência de alta performance (recursos GPU)",
+  "pci_app_add_resources_proposed_title": "Gamas de recursos disponibilizadas",
+  "pci_app_add_resources_proposed_ram": "RAM: {{ ram }}",
+  "pci_app_add_resources_proposed_storage": "Armazenamento local: {{ memory }} SSD",
   "pci_app_add_resources_proposed_bandwidth": "{{ bandwidth }}/s",
   "pci_app_add_resources_proposed_resource_price_by_resource": "/hora + IVA",
   "pci_app_add_resources_proposed_type_gpu": "(GPU)",
-  "pci_app_add_resources_proposed_type_gpu_description": "Apresentação das réplicas GPU",
+  "pci_app_add_resources_proposed_type_gpu_description": "Instâncias GPU disponíveis",
   "pci_app_add_resources_proposed_type_cpu": "(CPU)",
-  "pci_app_add_resources_proposed_type_cpu_description": "Apresentação das réplicas CPU",
+  "pci_app_add_resources_proposed_type_cpu_description": "Instâncias CPU disponíveis",
   "pci_app_add_resources_number_of_resources": "Recursos por réplicas",
   "pci_app_add_resources_number_of_resources_description": "Recursos CPU/GPU",
   "pci_app_add_resources_number_of_resources_type_cpu": "Recursos CPU",
@@ -34,5 +34,13 @@
   "pci_app_add_resources_flavor_count": "Dimensão da réplica",
   "pci_app_add_resources_total": "Preço total de implementação",
   "pci_app_add_resources_resource_price": "Preço do recurso",
-  "pci_app_add_resources_partner_price": "Preço da licença"
+  "pci_app_add_resources_partner_price": "Preço da licença",
+  "pci_app_add_resources_usecase_item_cpu_description": "Excelente relação qualidade/preço para a inferência de modelos standard de Machine Learning. Menos oneroso, mas muito eficiente se o seu modelo contém um número de parâmetros limitados, com uma escalabilidade extremamente rápida. Possibilidade de escolher até 12 CPU e 10 réplicas para uma alta disponibilidade.",
+  "pci_app_add_resources_usecase_item_gpu_description": "Melhores performances para a inferência de grandes modelos de Machine Learning e, em particular, modelos de Deep Learning contendo um grande número de parâmetros. Possibilidade de escolher até 4 GPU e 10 réplicas para uma alta disponibilidade.",
+  "pci_app_add_resources_proposed_cpu_description": "Modelo: {{resourceDescription}}",
+  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCores",
+  "pci_app_add_resources_proposed_bandwidth_public": "Rede pública: {{ bandwidth }}/s",
+  "pci_app_add_resources_proposed_bandwidth_private": "Rede privada: {{ bandwidth }}/s",
+  "pci_app_add_resources_scaling_description_message": "Tenha em conta que o número de réplicas escolhidas multiplicará o número de recursos consumidos."
 }
