--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/delete/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/delete/translations/Messages_pl_PL.json
@@ -2,7 +2,7 @@
   "pci_ai_apps_delete_success": "Twoja aplikacja została usunięta",
   "pci_ai_apps_delete_error": "Wystąpił błąd podczas usuwania aplikacji: {{message}}",
   "pci_ai_apps_delete": "Usuwanie aplikacji",
-  "pci_ai_apps_delete_warning": "Czy na pewno chcesz usunąć {{appId}}?",
+  "pci_ai_apps_delete_warning": "Czy na pewno chcesz usunąć aplikację {{appId}}?",
   "pci_ai_apps_delete_common_delete": "Usuń",
   "pci_ai_apps_delete_common_cancel": "Anuluj"
 }
