--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/delete/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/delete/translations/Messages_pt_PT.json
@@ -2,7 +2,7 @@
   "pci_ai_apps_delete_success": "A sua app foi eliminada com sucesso",
   "pci_ai_apps_delete_error": "Ocorreu um erro durante a eliminação da app: {{ message }}",
   "pci_ai_apps_delete": "Eliminação da app",
-  "pci_ai_apps_delete_warning": "Tem a certeza de que pretende eliminar a app {{ appId }}?",
+  "pci_ai_apps_delete_warning": "Quer mesmo eliminar a app {{ appId }}?",
   "pci_ai_apps_delete_common_delete": "Eliminar",
   "pci_ai_apps_delete_common_cancel": "Anular"
 }
