--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/start/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/start/translations/Messages_pl_PL.json
@@ -1,6 +1,6 @@
 {
   "pci_app_start_app_title": "Uruchomienie aplikacji",
-  "pci_app_start_app_content": "Czy na pewno chcesz uruchomić {{appName}} ?",
+  "pci_app_start_app_content": "Czy na pewno chcesz uruchomić aplikację {{appName}}?",
   "pci_app_start_app_success": "Twoja aplikacja została uruchomiona.",
   "pci_app_start_app_error": "Wystąpił błąd podczas uruchamiania Twojej aplikacji {{appName}}: {{message}}",
   "pci_app_start_app_submit_label": "Zatwierdź",
