--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/stop/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/stop/translations/Messages_pl_PL.json
@@ -1,6 +1,6 @@
 {
   "pci_app_stop_app_title": "Zatrzymanie aplikacji",
-  "pci_app_stop_app_content": "Czy na pewno chcesz zatrzymać {{appName}}?",
+  "pci_app_stop_app_content": "Czy na pewno chcesz zatrzymać aplikację {{appName}}?",
   "pci_app_stop_app_success": "Twoja aplikacja została zatrzymana.",
   "pci_app_stop_app_error": "Wystąpił błąd podczas zatrzymywania Twojej aplikacji {{appName}}: {{message}}",
   "pci_app_stop_app_submit_label": "Zatwierdź",
