--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_de_DE.json
@@ -7,5 +7,7 @@
   "pci_app_update_app_image_input_image_name_label": "Zugriffspfad zu Ihrem Docker Image",
   "pci_app_update_app_image_input_image_name_popover": "Angenommen werden Bilder, die in einer privaten oder öffentlichen Registry gehostet werden (Github, GitLab, DockerHub...)",
   "pci_app_update_app_image_success": "Das Docker Image Ihrer App wird aktualisiert",
-  "pci_app_update_app_image_error": "Bei der Aktualisierung des Docker Images Ihrer App {{appName}} ist ein Fehler aufgetreten: {{message}}"
+  "pci_app_update_app_image_error": "Bei der Aktualisierung des Docker Images Ihrer App {{appName}} ist ein Fehler aufgetreten: {{message}}",
+  "pci_app_update_app_image_message_1": "Sie können das Docker-Image Ihrer Anwendung aktualisieren und so eine stets aktuelle Version Ihrer Dienstleistung anbieten. Die Updates erfolgen schrittweise und ohne Unterbrechung. Sie behalten Ihre aktuelle Konfiguration, wie zum Beispiel den HTTP-Endpoint und Ihre Deployment-Strategie.",
+  "pci_app_update_app_image_message_2": "Bitte geben Sie einen anderen Tag ein, damit das Docker-Image aktualisiert wird."
 }
