--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_en_GB.json
@@ -7,5 +7,7 @@
   "pci_app_update_app_image_input_image_name_label": "Your Docker image path",
   "pci_app_update_app_image_input_image_name_popover": "Images hosted on a private or public registry are accepted (GitHub, GitLab, DockerHub, etc.)",
   "pci_app_update_app_image_success": "Updating the Docker image for your app...",
-  "pci_app_update_app_image_error": "An error has occurred updating the Docker image for your {{appName}} app: {{message}}"
+  "pci_app_update_app_image_error": "An error has occurred updating the Docker image for your {{appName}} app: {{message}}",
+  "pci_app_update_app_image_message_1": "You can update your application's Docker image to offer an up-to-date version of your service. Updates are incremental, and will not result in any service disruptions. Your current configuration will also be retained, such as your HTTP endpoint and deployment strategy.",
+  "pci_app_update_app_image_message_2": "Please provide a different tag so that the Docker image update is taken into account."
 }
