--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_es_ES.json
@@ -7,5 +7,7 @@
   "pci_app_update_app_image_input_image_name_label": "Ruta de acceso a su imagen Docker",
   "pci_app_update_app_image_input_image_name_popover": "Se aceptan las imágenes alojadas en un registro público o privado (GitHub, GitLab, DockerHub, etc.).",
   "pci_app_update_app_image_success": "Actualizando la imagen Docker de su app...",
-  "pci_app_update_app_image_error": "Se ha producido un error al actualizar la imagen Docker de su app {{ appName }}: {{ message }}."
+  "pci_app_update_app_image_error": "Se ha producido un error al actualizar la imagen Docker de su app {{ appName }}: {{ message }}.",
+  "pci_app_update_app_image_message_1": "Puede actualizar la imagen Docker de su app para ofrecer una versión actualizada del servicio. Las actualizaciones son incrementales y sin cortes. Conservará su configuración actual, como su punto final HTTP o su estrategia de despliegue.",
+  "pci_app_update_app_image_message_2": "Por favor, introduzca una etiqueta diferente para aplicar la actualización de la imagen Docker."
 }
