--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/update-image/translations/Messages_pl_PL.json
@@ -7,5 +7,7 @@
   "pci_app_update_app_image_input_image_name_label": "Ścieżka dostępu Twojego obrazu Docker",
   "pci_app_update_app_image_input_image_name_popover": "Akceptowane są obrazy przechowywane w prywatnym lub publicznym rejestrze (GitHub, GitLab, DockerHub, ...)",
   "pci_app_update_app_image_success": "Trwa aktualizacja obrazu Docker Twojej aplikacji",
-  "pci_app_update_app_image_error": "Wystąpił błąd podczas aktualizacji obrazu Docker Twojej aplikacji {{appName}}: {{message}}"
+  "pci_app_update_app_image_error": "Wystąpił błąd podczas aktualizacji obrazu Docker Twojej aplikacji {{appName}}: {{message}}",
+  "pci_app_update_app_image_message_1": "Możesz zaktualizować obraz Docker aplikacji, aby uzyskać zawsze aktualną wersję usługi. Aktualizacje są przyrostowe i nie powodują przerw w działaniu. Zachowujesz aktualną konfigurację, taką jak punkt końcowy HTTP lub strategia wdrażania.",
+  "pci_app_update_app_image_message_2": "Prosimy o podanie innego tagu, aby uwzględniał on aktualizację obrazu Docker."
 }
