--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_de_DE.json
@@ -1,6 +1,6 @@
 {
   "pci_apps_general_information_info_title": "Allgemeine Informationen",
-  "pci_apps_general_information_info_app_url": "Zugangs-URL",
+  "pci_apps_general_information_info_app_url": "Zugangs-URL (HTTP-Endpoint)",
   "pci_apps_general_information_info_app_name": "Name der App",
   "pci_apps_general_information_info_app_container": "Verbundene Container",
   "pci_apps_general_information_info_app_container_total": "{{ xContainer }} Container",
@@ -55,5 +55,6 @@
   "pci_apps_general_information_min_replicas": "Mindestanzahl an Replikas:",
   "pci_apps_general_information_max_replicas": "Höchstzahl an Replikas:",
   "pci_apps_general_information_trigger_resource": "Überwachte Metrik:",
-  "pci_apps_general_information_trigger_resource_threshold": "Schwellenwert:"
+  "pci_apps_general_information_trigger_resource_threshold": "Schwellenwert:",
+  "pci_apps_general_information_info_app_port": "Port"
 }
