--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_en_GB.json
@@ -1,6 +1,6 @@
 {
   "pci_apps_general_information_info_title": "General information",
-  "pci_apps_general_information_info_app_url": "Access URL",
+  "pci_apps_general_information_info_app_url": "Access URL (HTTP endpoint)",
   "pci_apps_general_information_info_app_name": "App name",
   "pci_apps_general_information_info_app_container": "Attached containers",
   "pci_apps_general_information_info_app_container_total": "{{xContainer}} container(s)",
@@ -55,5 +55,6 @@
   "pci_apps_general_information_min_replicas": "Minimum number of replicas:",
   "pci_apps_general_information_max_replicas": "Maximum number of replicas:",
   "pci_apps_general_information_trigger_resource": "Metric monitored:",
-  "pci_apps_general_information_trigger_resource_threshold": "Trigger threshold:"
+  "pci_apps_general_information_trigger_resource_threshold": "Trigger threshold:",
+  "pci_apps_general_information_info_app_port": "Port"
 }
