--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_es_ES.json
@@ -1,6 +1,6 @@
 {
   "pci_apps_general_information_info_title": "Información general",
-  "pci_apps_general_information_info_app_url": "URL de acceso",
+  "pci_apps_general_information_info_app_url": "URL de acceso (HTTP endpoint)",
   "pci_apps_general_information_info_app_name": "Nombre de la app",
   "pci_apps_general_information_info_app_container": "Contenedores asociados",
   "pci_apps_general_information_info_app_container_total": "{{ xContainer }} contenedor(es)",
@@ -55,5 +55,6 @@
   "pci_apps_general_information_min_replicas": "Número mínimo de réplicas:",
   "pci_apps_general_information_max_replicas": "Número máximo de réplicas:",
   "pci_apps_general_information_trigger_resource": "Métrica vigilada:",
-  "pci_apps_general_information_trigger_resource_threshold": "Umbral de activación:"
+  "pci_apps_general_information_trigger_resource_threshold": "Umbral de activación:",
+  "pci_apps_general_information_info_app_port": "Puerto"
 }
