--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_it_IT.json
@@ -1,6 +1,6 @@
 {
   "pci_apps_general_information_info_title": "Informazioni generali",
-  "pci_apps_general_information_info_app_url": "URL di accesso",
+  "pci_apps_general_information_info_app_url": "URL di accesso (endpoint HTTP)",
   "pci_apps_general_information_info_app_name": "Nome dell'App",
   "pci_apps_general_information_info_app_container": "Container associati",
   "pci_apps_general_information_info_app_container_total": "{{ xContainer }} container",
@@ -55,5 +55,6 @@
   "pci_apps_general_information_min_replicas": "Numero minimo di repliche:",
   "pci_apps_general_information_max_replicas": "Numero massimo di repliche:",
   "pci_apps_general_information_trigger_resource": "Metrica monitorata:",
-  "pci_apps_general_information_trigger_resource_threshold": "Soglia di attivazione:"
+  "pci_apps_general_information_trigger_resource_threshold": "Soglia di attivazione:",
+  "pci_apps_general_information_info_app_port": "Porta"
 }
