--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/translations/Messages_pt_PT.json
@@ -1,6 +1,6 @@
 {
   "pci_apps_general_information_info_title": "Informações gerais",
-  "pci_apps_general_information_info_app_url": "URL de acesso",
+  "pci_apps_general_information_info_app_url": "URL de acesso (HTTP endpoint)",
   "pci_apps_general_information_info_app_name": "Nome da app",
   "pci_apps_general_information_info_app_container": "Containers associados",
   "pci_apps_general_information_info_app_container_total": "{{ xContainer }} container(s)",
@@ -55,5 +55,6 @@
   "pci_apps_general_information_min_replicas": "Mínimo de réplicas:",
   "pci_apps_general_information_max_replicas": "Máximo de réplicas:",
   "pci_apps_general_information_trigger_resource": "Métrica vigiada:",
-  "pci_apps_general_information_trigger_resource_threshold": "Patamar de acionamento:"
+  "pci_apps_general_information_trigger_resource_threshold": "Patamar de acionamento:",
+  "pci_apps_general_information_info_app_port": "Porta"
 }
