--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_de_DE.json
@@ -35,5 +35,7 @@
   "pci_ai_app_list_stop_error": "Beim Anhalten der App {{appName}} ist ein Fehler aufgetreten: {{message}}",
   "pci_ai_app_list_creator": "Benutzer",
   "pci_ai_app_beta_warning_special_conditions": "AI Apps hat einen neuen Namen: AI Deploy. Für AI Deploy gelten die ",
-  "pci_ai_app_beta_warning_special_conditions_link": "besonderen Bedingungen für die Public Cloud Dienste von OVHcloud"
+  "pci_ai_app_beta_warning_special_conditions_link": "besonderen Bedingungen für die Public Cloud Dienste von OVHcloud",
+  "pci_ai_app_list_creation_date": "Erstellungsdatum",
+  "pci_ai_app_list_last_update_date": "Datum des Updates"
 }
