--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_en_GB.json
@@ -35,5 +35,7 @@
   "pci_ai_app_list_status_STOPPING": "Stopping",
   "pci_ai_app_beta_warning": "During the beta testing phase, the infrastructure’s availability and data longevity are not guaranteed. Please do not use this service for applications that are in production, as this phase is not complete.",
   "pci_ai_app_beta_warning_special_conditions": "AI Apps has changed its name to AI Deploy. AI Deploy is covered by ",
-  "pci_ai_app_beta_warning_special_conditions_link": "OVHcloud Public Cloud Special Conditions"
+  "pci_ai_app_beta_warning_special_conditions_link": "OVHcloud Public Cloud Special Conditions",
+  "pci_ai_app_list_creation_date": "Creation date",
+  "pci_ai_app_list_last_update_date": "Last updated"
 }
