--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_es_ES.json
@@ -35,5 +35,7 @@
   "pci_ai_app_list_stop_error": "Se ha producido un error al detener la app {{appName}}: {{message}}",
   "pci_ai_app_list_creator": "Usuario",
   "pci_ai_app_beta_warning_special_conditions": "AI Apps cambia de nombre y se convierte en AI Deploy. AI Deploy es un servicio sujeto a las ",
-  "pci_ai_app_beta_warning_special_conditions_link": "Condiciones Especiales de los Servicios Public Cloud de OVHcloud"
+  "pci_ai_app_beta_warning_special_conditions_link": "Condiciones Especiales de los Servicios Public Cloud de OVHcloud",
+  "pci_ai_app_list_creation_date": "Fecha de creación",
+  "pci_ai_app_list_last_update_date": "Fecha de actualización"
 }
