--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_it_IT.json
@@ -35,5 +35,7 @@
   "pci_ai_app_list_stop_error": "Si è verificato un errore durante la disattivazione dell'App {{appName}}: {{message}}",
   "pci_ai_app_list_creator": "Utente",
   "pci_ai_app_beta_warning_special_conditions": "AI Apps cambia nome e diventa AI Deploy. AI Deploy è soggetto alle ",
-  "pci_ai_app_beta_warning_special_conditions_link": "Condizioni Speciali dei Servizi Public Cloud di OVHcloud"
+  "pci_ai_app_beta_warning_special_conditions_link": "Condizioni Speciali dei Servizi Public Cloud di OVHcloud",
+  "pci_ai_app_list_creation_date": "Data di creazione",
+  "pci_ai_app_list_last_update_date": "Data di aggiornamento"
 }
