--- a/packages/manager/modules/pci/src/projects/project/ai/tokens/delete/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/tokens/delete/translations/Messages_de_DE.json
@@ -1,3 +1,3 @@
 {
-  "pci_ai_tokens_delete_warning": "Sind Sie sicher, dass Sie das Token {{ tokenId }} löschen möchten?"
+  "pci_ai_tokens_delete_warning": "Sind Sie sicher, dass Sie den Token {{ tokenId }} löschen möchten?"
 }
