--- a/packages/manager/modules/pci/src/projects/project/ai/tokens/delete/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/tokens/delete/translations/Messages_pt_PT.json
@@ -1,3 +1,3 @@
 {
-  "pci_ai_tokens_delete_warning": "Tem a certeza de que pretende eliminar o token {{ tokenId }}?"
+  "pci_ai_tokens_delete_warning": "Quer mesmo eliminar o token {{ tokenId }}?"
 }
