--- a/packages/manager/modules/pci/src/projects/project/ai/tokens/update/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/tokens/update/translations/Messages_it_IT.json
@@ -1,3 +1,3 @@
 {
-  "pci_ai_tokens_update_warning": "Vuoi davvero rigenerare il token {{ tokenId }}? Il token precedente non sarà più valido."
+  "pci_ai_tokens_update_warning": "Vuoi davvero rigenerare {{ tokenId }}? Il token precedente non sarà più valido."
 }
