--- a/packages/manager/modules/pci/src/projects/project/ai/tokens/update/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/tokens/update/translations/Messages_pt_PT.json
@@ -1,3 +1,3 @@
 {
-  "pci_ai_tokens_update_warning": "Tem a certeza de que pretende regenerar {{ tokenId }}? O seu antigo token deixará de ser válido."
+  "pci_ai_tokens_update_warning": "Quer mesmo regenerar {{ tokenId }}? O seu antigo token deixará de ser válido."
 }
