fix(dedicated): introducing none filesystem for partitioning
ref: PUBM-20733
Signed-off-by: Jean-Baptiste Delon <jean-baptiste.delon@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_FR.json
@@ -607,6 +607,7 @@
   "server_configuration_installation_ZFS": "ZFS",
   "server_configuration_installation_REISERFS": "ReiserFS",
   "server_configuration_installation_SWAP": "Swap",
+  "server_configuration_installation_NONE": "Aucun",
   "server_configuration_installation_UFS": "UFS",
   "server_configuration_installation_LOGICAL": "logical",
   "server_configuration_installation_LV": "lv",
